<resources>
    <string name="app_name">StoryApp</string>
    <string name="splash">StoryApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_hint">Input Name</string>
    <string name="email_hint">Input Email</string>
    <string name="pass_hint">Input Password</string>
    <string name="desc_hint">Input Description</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="no_account">Don\'t have an account yet? </string>
    <string name="register_here">Register here!</string>
    <string name="complete">Complete data</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
</resources>